# shrec21_changedetection

./: .gitignore  README.md  config.ini  confusion.sh  run.sh  setup.sh
ChangeDetectionDatasetViewer/: config.ini  data_viewer.py  utils.py
gerasimos_shrec/: gerasimos_point_coud_registration_v2.m  i_dont_know_gerasimos_point_coud_registration_v2.m~  index.txt  my_predicted.txt  myweighedticp.m  new_clustered.ply  old_clustered.ply  old_gerasimos_point_coud_registration_v2.m  point_coud_registration_v2.m  predicted.txt
matlab_shrec/: classification_point_coud_registration_v2.m  clustering.m  gerasimos_point_coud_registration_v2.m~  model.txt  my_predicted.txt  mydbscan.m  place.txt  predicted.txt  true.txt
shrec21/: CMakeLists.txt  hist_plotter.py  plotter.py
shrec21/include/: Dataset.h  filenames.h  utils.h
shrec21/src/: Dataset.cpp  main.cpp
